# seat-allocator-remake

./: .gitignore
cpp/: CMakeLists.txt  algo.hpp  backend.hpp  export_lib.cpp  rule_factory.hpp
py/: frontend.py  main.py
py/ui/: __init__.py  ui_build.bat  widget.ui
